refactor: separate frontend and backend into distinct directories
Document file structure in README

Added file structure section to README for better organization.

fixed structure visualization

Added code block to illustrate file structure.

Update README for frontend and backend directory structure

fixed gitignore

removed keys.env and re-rotated api key

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
-# Ignore keys
-scripts/keys.env
-
-# Ignore node modules
-#node_modules/
+# Environment variables and API keys
+backend/keys.env
+*.env
+.env
